tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@rotation.plume.snap
---
source: tests/conformance.rs
assertion_line: 26
expression: svg
input_file: samples/rotation.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-178 -40.5 356 81" width="356" height="81" class="plume">
  <defs/>
  <g class="plume-scene" color="#222">
    <g class="plume-node plume-shape-rect" transform="translate(-127.5,0)">
      <rect x="-30" y="-20" width="60" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">0deg</text>
      </g>
    </g>
    <g class="plume-node plume-shape-rect" transform="translate(-42.5,0) rotate(15)">
      <rect x="-30" y="-20" width="60" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">15deg</text>
      </g>
    </g>
    <g class="plume-node plume-shape-rect" transform="translate(42.5,0) rotate(-30)">
      <rect x="-30" y="-20" width="60" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">-30deg</text>
      </g>
    </g>
    <g class="plume-node plume-shape-rect" transform="translate(127.5,0) rotate(45)">
      <rect x="-30" y="-20" width="60" height="40" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">45deg</text>
      </g>
    </g>
  </g>
  <g class="plume-wires"/>
</svg>
