tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@scene_grid.plume.snap
---
source: tests/conformance.rs
assertion_line: 26
expression: svg
input_file: samples/scene_grid.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-143.175 -44.8 286.35 89.6" width="286.35" height="89.6" class="plume">
  <defs/>
  <g class="plume-scene" color="#222">
    <g class="plume-node plume-shape-oval" data-id="cat" transform="translate(-95.45,0)">
      <ellipse cx="0" cy="0" rx="27.225" ry="24.3" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">Cat</text>
      </g>
    </g>
    <g class="plume-node plume-shape-treat plume-shape-rect plume-style-bold" data-id="dog" transform="translate(0,0)">
      <rect x="-27.225" y="-24.3" width="54.45" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">Dog</text>
      </g>
    </g>
    <g class="plume-node plume-shape-nest plume-shape-slant" data-id="owl" transform="translate(95.45,0)">
      <polygon points="-20.7138,-24.3 33.7362,-24.3 20.7138,24.3 -33.7362,24.3" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">Owl</text>
      </g>
    </g>
  </g>
  <g class="plume-wires"/>
</svg>
