tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@templates_all.plume.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/templates_all.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-225.125 -89.3 450.25 178.6" width="450.25" height="178.6" class="plume">
  <defs/>
  <g class="plume-scene" color="black">
    <g class="plume-node plume-shape-group plume-shape-rect" transform="translate(-170.25,-44.5)">
      <rect x="-34.375" y="-24.3" width="68.75" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">group</text>
      </g>
    </g>
    <g class="plume-node plume-shape-badge plume-shape-rect" transform="translate(-44.875,-44.5)">
      <rect x="-34.375" y="-24.3" width="68.75" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">badge</text>
      </g>
    </g>
    <g class="plume-node plume-shape-button plume-shape-rect" transform="translate(84.075,-44.5)">
      <rect x="-37.95" y="-24.3" width="75.9" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">button</text>
      </g>
    </g>
    <g class="plume-node plume-shape-card plume-shape-rect" transform="translate(173.825,-44.5)">
      <rect x="-30.8" y="-24.3" width="61.6" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">card</text>
      </g>
    </g>
    <g class="plume-node plume-shape-note plume-shape-rect" transform="translate(-170.25,34.8)">
      <rect x="-30.8" y="-24.3" width="61.6" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">note</text>
      </g>
    </g>
    <g class="plume-node plume-shape-table plume-shape-group plume-shape-rect" data-id="fridge" transform="translate(-44.875,34.8)">
      <rect x="-70" y="-34" width="140" height="68" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-cell plume-shape-rect" transform="translate(-40,-22)">
        <rect x="-20.075" y="-24.3" width="40.15" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">A</text>
        </g>
      </g>
      <g class="plume-node plume-shape-cell plume-shape-rect" transform="translate(40,-22)">
        <rect x="-20.075" y="-24.3" width="40.15" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">B</text>
        </g>
      </g>
      <g class="plume-node plume-shape-cell plume-shape-rect" transform="translate(-40,22)">
        <rect x="-20.075" y="-24.3" width="40.15" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">C</text>
        </g>
      </g>
      <g class="plume-node plume-shape-cell plume-shape-rect" transform="translate(40,22)">
        <rect x="-20.075" y="-24.3" width="40.15" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
        <g class="plume-node plume-shape-text" transform="translate(0,0)">
          <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">D</text>
        </g>
      </g>
    </g>
    <g class="plume-node plume-shape-cell plume-shape-rect" transform="translate(84.075,34.8)">
      <rect x="-30.8" y="-24.3" width="61.6" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="sans-serif" fill="currentColor">cell</text>
      </g>
    </g>
  </g>
  <g class="plume-wires"/>
</svg>
