tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@type_defaults.plume.snap
---
source: tests/conformance.rs
expression: svg
input_file: samples/type_defaults.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-121.15 -43.6 242.3 87.2" width="242.3" height="87.2" class="plume">
  <defs/>
  <g class="plume-scene" color="black">
    <g class="plume-node plume-shape-rect" data-id="cat" transform="translate(-75.075,0)">
      <rect x="-25.575" y="-23.1" width="51.15" height="46.2" rx="6" ry="6" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" font-weight="bold">Cat</text>
      </g>
    </g>
    <g class="plume-node plume-shape-rect" data-id="dog" transform="translate(7.075,0)">
      <rect x="-25.575" y="-23.1" width="51.15" height="46.2" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" font-weight="bold">Dog</text>
      </g>
    </g>
    <g class="plume-node plume-shape-alert plume-shape-oval" data-id="mouse" transform="translate(82.15,0)">
      <ellipse cx="0" cy="0" rx="18" ry="18" fill="white" stroke="red" stroke-width="2"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" font-weight="bold">Mouse</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="cat" data-to="dog">
      <path d="M -49 0 L -23 0" fill="none" stroke="#666" stroke-width="1.5"/>
      <polygon class="plume-marker plume-marker-arrow" points="-20,0 -27.5,3.75 -27.5,-3.75" fill="#666"/>
      <text x="-34" y="0" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">chases</text>
    </g>
    <g class="plume-wire" data-from="dog" data-to="mouse">
      <path d="M 33.15 0 L 59.15 0" fill="none" stroke="#666" stroke-width="1.5"/>
      <polygon class="plume-marker plume-marker-arrow" points="62.15,0 54.65,3.75 54.65,-3.75" fill="#666"/>
      <text x="48.15" y="0" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">stalks</text>
    </g>
  </g>
</svg>
