tests/snapshots/conformance__snapshot_baked_svg_for_every_sample@wires_anchors.plume.snap
---
source: tests/conformance.rs
assertion_line: 26
expression: svg
input_file: samples/wires_anchors.plume
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-186.75 -76.8 373.5 121.6" width="373.5" height="121.6" class="plume">
  <defs/>
  <g class="plume-scene" color="#222">
    <g class="plume-node plume-shape-rect" data-id="cat" transform="translate(-139.025,0)">
      <rect x="-27.225" y="-24.3" width="54.45" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">Cat</text>
      </g>
    </g>
    <g class="plume-node plume-shape-rect" data-id="dog" transform="translate(-3.575,0)">
      <rect x="-27.225" y="-24.3" width="54.45" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">Dog</text>
      </g>
    </g>
    <g class="plume-node plume-shape-rect" data-id="bird" transform="translate(135.45,0)">
      <rect x="-30.8" y="-24.3" width="61.6" height="48.6" rx="0" ry="0" fill="white" stroke="#444" stroke-width="1"/>
      <g class="plume-node plume-shape-text" transform="translate(0,0)">
        <text x="0" y="0" text-anchor="middle" dominant-baseline="central" font-size="13" font-family="system-ui, -apple-system, sans-serif" fill="currentColor">Bird</text>
      </g>
    </g>
  </g>
  <g class="plume-wires">
    <g class="plume-wire" data-from="cat" data-to="dog">
      <path d="M -107.3 3.2 L -35.3 3.2" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="-110.3,3.2 -104.3,0.2 -104.3,6.2" fill="#444"/>
      <polygon class="plume-marker plume-marker-arrow" points="-32.3,3.2 -38.3,6.2 -38.3,0.2" fill="#444"/>
      <text x="-71.3" y="3.2" text-anchor="middle" dominant-baseline="central" font-size="11" font-family="system-ui, -apple-system, sans-serif" fill="currentColor" paint-order="stroke" stroke="white" stroke-width="4.4" stroke-linejoin="round">chats</text>
    </g>
    <g class="plume-wire" data-from="dog" data-to="bird">
      <path d="M -2.75 24.8 L -2.75 -56.8 L 133.25 -56.8 L 133.25 -28.8" fill="none" stroke="#444" stroke-width="1"/>
      <polygon class="plume-marker plume-marker-arrow" points="133.25,-25.8 130.25,-31.8 136.25,-31.8" fill="#444"/>
    </g>
  </g>
</svg>
